--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app/index.js",
   "scripts": {
     "test": "mocha app/**/*--test.js",
-    "start": "node app/index.js"
+    "start": "node app/index.js",
+    "test-watch": "mocha --watch app/**/*--test.js"
   },
   "repository": {
     "type": "git",
