--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "fizzbuzz-online",
   "version": "0.1.0",
   "description": "Fizzbuzz as a service - yes, it has come to this.",
-  "main": "app/index.js",
+  "main": "index.js",
   "scripts": {
     "test": "mocha app/**/*--test.js",
-    "start": "node app/index.js",
+    "start": "node index.js",
     "test-watch": "mocha --watch app/**/*--test.js"
   },
   "repository": {
