--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Fizzbuzz as a service - yes, it has come to this.",
   "main": "index.js",
   "scripts": {
-    "test": "mocha app/**/*--test.js",
+    "test": "mocha 'app/**/*--test.js'",
     "start": "node index.js",
-    "test-watch": "mocha --watch app/**/*--test.js"
+    "test-watch": "mocha --watch 'app/**/*--test.js'"
   },
   "repository": {
     "type": "git",
